# videoSearch

./: .gitignore  CMakeLists.txt
.svn/: wc.db
1Preprocessor/: 1Preprocessor.vcxproj
2KeyFrameExactor/: 2KeyFrameExactor.vcxproj  2KeyFrameExactor.vcxproj.filters
3SearchIndex/: 3SearchIndex.vcxproj  3SearchIndex.vcxproj.filters  result - 副本.json  result.json
4JNIexport/: 4JNIexport.vcxproj  4JNIexport.vcxproj.filters  impl.cpp
src/: CMakeLists.txt  DataTable.cpp  DataTable.h  FeatExactor.cpp  FeatExactor.h  KeyFrameExactor.h  MultiThreadHCindex.h  Serialization.h  VideoIndexEngine.cpp  VideoIndexEngine.h  VideoReader.cpp  colorFeat.cpp  colorFeat.h  defines.h  impl.cpp  index_sort.h
src/flann/algorithms/: all_indices.h  center_chooser.h  dist.h
src/flann/util/: allocator.h  saving.h
src/jniImplementation/: impl.cpp
src/test/: CMakeLists.txt  test_keyframe_exactor.cpp  test_preproc.cpp  test_search.cpp
src/video_search/: CMakeLists.txt  DataTable.cpp  DataTable.h  FeatExactor.h  KeyFrameExactor.cpp  NonCopyable.h  Preprocessor.h  VideoIndexEngine.cpp  VideoReader.h  VideoSearchParam.cpp  VideoSearchParam.h  index_sort.h
src/video_search/flann/: defines.h  flann.hpp
src/video_search/flann/algorithms/: center_chooser.h  hierarchical_clustering_index.h  nn_index.h
src/video_search/flann/util/: allocator.h  saving.h  serialization.h
src/video_search_jni/: CMakeLists.txt  casia_isiteam_videosearch_slave_IndexJNI.h  video_search_jni.cpp
test/: CMakeLists.txt  test_keyframe_exactor.cpp  test_search.cpp  test_search_core.cpp
